# smoldb

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  file.json  rename_again.py
.agent/rules/: AGENTS.md
src/: db_init.rs  db_model.rs  lib.rs
src/db_model/: db_entry.rs  db_table.rs  db_type.rs  db_types.rs  mod.rs
tests/: database.rs  files.rs  package_infos.rs
