[package]
name = "smoldb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustlog = {git = "http://serveur-dev.home/rust-libs/rustlog.git", tag = "1.0.0"}
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
rusttests = { git = "http://serveur-dev.home/rust-libs/rusttests.git", tag = "1.0.0"}